--- a/Single_data_Microglia_Annotation.Rmd
+++ b/Single_data_Microglia_Annotation.Rmd
@@ -19,7 +19,7 @@ library(data.table)
 # pipelining
 library(tidyverse) 
 library(dplyr)
-#Processing
+# Processing
 library(harmony)
 # For plotting
 library(ggplot2)
@@ -38,33 +38,22 @@ setwd(working_path)
 ## Import and QC
 
 ```{r Import data, QC and Normalization}
-# three different samples: 100-WT, 101 - GpnmbKO, 102-GpnmbKO)
-seurat_list <- lapply(list.files( data_path, pattern = "*.h5", full.name =TRUE), 
-  function(file){
-    file_ind <- which(list.files( data_path, pattern = "*.h5", full.name =TRUE) == file)
-    seurat_object <- Read10X_h5(file , use.names = TRUE, unique.features = TRUE) %>% 
-      CreateSeuratObject(project = c("WT", "GpnmbKO_1", "GpnmbKO_2")[file_ind], min.cells = 3, min.features = 200)
-    seurat_object$stim <- sprintf("cond%s", file_ind-1)
-    seurat_object[["percent.mt"]] <- PercentageFeatureSet(seurat_object, pattern = "^mt-")
-    seurat_object[["percent.rb"]] <- PercentageFeatureSet(seurat_object, pattern = "^Rp[sl]")
-    seurat_object %>% 
-      subset( subset = nFeature_RNA > 200 & nFeature_RNA < 10000 & percent.mt < 15 & percent.rb < 25 ) %>%
-      NormalizeData(normalization.method = "LogNormalize", scale.factor = 10000) %>%
-      FindVariableFeatures(selection.method = "vst", nfeatures = 2000) 
-    seurat_object
-})
+
+seurat_combi <- Read10X_h5(file.path(data_path, "filtered_feature_bc_matrix.h5")) %>%
+  CreateSeuratObject(project = "filtered", min.cells = 3, min.features = 200) 
+
+seurat_combi[["percent.mt"]] <- PercentageFeatureSet(seurat_combi, pattern = "^mt-")
+seurat_combi[["percent.rb"]] <- PercentageFeatureSet(seurat_combi, pattern = "^Rp[sl]")
+seurat_combi %>% 
+    subset( subset = nFeature_RNA > 200 & nFeature_RNA < 10000 & percent.mt < 15 & percent.rb < 25 ) %>%
+    NormalizeData(normalization.method = "LogNormalize", scale.factor = 10000) %>%
+    FindVariableFeatures(selection.method = "vst", nfeatures = 2000) 
 
 # Should also remove the doublet cells
 ```
 
 ## Integration
 
-```{r Integration}
-# Perform Integration: select integration features, find anchor genes, integrate
-seurat_combi <- seurat_list %>% SelectIntegrationFeatures() %>% 
-  {FindIntegrationAnchors(object.list = seurat_list, anchor.features = .)} %>% 
-  IntegrateData()
-```
 
 Plot Vplot for QC visualization
 ```{r}
@@ -74,7 +63,8 @@ VlnPlot(seurat_combi, features = c("nFeature_RNA", "nCount_RNA", "percent.mt"),
 ```
 
 ```{r Processing and dimred}
-seurat_combi <- seurat_combi %>%  
+seurat_combi <- seurat_combi %>%
+    FindVariableFeatures(nfeatures = 2000) %>%
     ScaleData() %>%
     RunPCA(npcs = 50)
 
@@ -89,23 +79,28 @@ ElbowPlot(seurat_combi, ndims= 50) + ylab("variance explained (%)") +
                 geom_label(
                   label=sprintf("PC selected: %1.0f",pcs), 
                   x=pcs,
-                  y=seurat_combi[["pca"]]@stdev[pcs] + 1,
+                  y=seurat_combi[["pca"]]@stdev[pcs] + 3,
                   label.padding = unit(0.55, "lines"), # Rectangle size around label
                   label.size = 0.35,
                   color = "black",
                   fill="#69b3a2")
 ```
 
-```{r clustering}
-seurat_combi <- seurat_combi %>% FindNeighbors(dims = 1:pcs) %>%
-  FindClusters(resolution = 0.35)
-# seurat_combi$seurat_clusters <- paste0("mg", seurat_combi$seurat_clusters)
+```{r integration and Clustering}
+# Harmony integration
+seurat_combi <- RunHarmony(seurat_combi, dims.use = 1:pcs, max.iter.harmony = 50) %>% 
+    RunUMAP(seurat_combi, reduction = "harmony", dims = 1:pcs, reduction.name = 'har_umap',reduction.key="UMAPHAR_") %>% 
+    FindNeighbors(seurat_combi, reduction = "harmony", dims = 1:pcs, graph.name = 'har_snn') %>% FindClusters(resolution = 1)
 
-# mg.combined <- RunTSNE(object = mg.combined, dims = 1:pcs)
-seurat_combi <- RunUMAP(seurat_combi, dims = 1:pcs)
+seurat_combi$seurat_clusters <- paste0("mg", seurat_combi$seurat_clusters)
+    
+#visualization of the results
+plot1_Har <- UMAPPlot(seurat_combi, group.by="orig.ident", pt.size = 0.5)
+plot2_Har <- UMAPPlot(seurat_combi, label = T, pt.size = 0.5)
 
-Plot1 <- DimPlot(seurat_combi, group.by = "seurat_clusters", label = FALSE, label.color = "black", pt.size = 0.3, cols = pal_simpsons()(12))  + plot_annotation(title="Clusters") + NoAxes()
-Plot2 <- DimPlot(seurat_combi, group.by = "orig.ident",pt.size = 0.3, cols = pal_simpsons()(3)) + 
+Plot1 <- DimPlot(seurat_combi, group.by = "seurat_clusters", label = T, label.color = "black", pt.size = 0.3, cols = pal_npg("nrc")(10))  + 
+  plot_annotation(title="Clusters") + NoAxes()
+Plot2 <- DimPlot(seurat_combi, group.by = "orig.ident",pt.size = 0.3, cols = pal_npg("nrc")(10)) + 
   plot_annotation(title="Conditions") + NoAxes()
 Plot1 + Plot2
 ```
@@ -159,7 +154,7 @@ seurat_markers <- FindAllMarkers(seurat_combi, only.pos = TRUE, min.pct = 0.25, 
     group_by(cluster) %>%
     subset(gene %in% unlist(exist_list))
   
-DoHeatmap(seurat_combi, features = seurat_markers$gene, group.colors = pal_simpsons()(12))
+DoHeatmap(seurat_combi, features = seurat_markers$gene, group.colors = pal_npg("nrc")(8))
 ```
 Pseudo bulk analysis
 ```{r pseudo bulk analysis}
